--- a/people/academic/catling_finn.qmd
+++ b/people/academic/catling_finn.qmd
@@ -8,42 +8,28 @@ toc: false
 # resources: 
 #   - "your_cv.pdf"
 about:
-  id: person-profile
-  template: jolla
-  links:
-    # Note fas & ai packs use -text: instead of - icon:
-    # See: https://github.com/quarto-ext/fontawesome/issues/6#issuecomment-1188620081
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com/FinnCatling
-    - text: "{{< ai researchgate >}} ResearchGate"
-      href: https://www.researchgate.net/profile/Finn_Catling
-    - text: "{{< ai google-scholar >}} Google Scholar"
-      href: https://scholar.google.com/citations?user=-7mYqgwAAAAJ&hl=en&oi=sra
-    - icon: github
-      text: GitHub
-      href: https://github.com/finncatling
-    - icon: linkedin
-      text: LinkedIn
-      href: https://www.linkedin.com/in/finncatling
-    - icon: globe
-      text: Imperial
-      href: https://www.imperial.ac.uk/people/f.catling
+    template: solana
+    image-shape: rounded
+    image-width: 200px
+    links:
+      - icon: twitter
+        text: Twitter
+        href: https://twitter.com/FinnCatling
+      - text: "{{< ai researchgate >}} ResearchGate"
+        href: https://www.researchgate.net/profile/Finn_Catling
+      - text: "{{< ai google-scholar >}} Google Scholar"
+        href: https://scholar.google.com/citations?user=-7mYqgwAAAAJ&hl=en&oi=sra
+      - icon: github
+        text: GitHub
+        href: https://github.com/finncatling
+      - icon: linkedin
+        text: LinkedIn
+        href: https://www.linkedin.com/in/finncatling
+      - icon: globe
+        text: Imperial
+        href: https://www.imperial.ac.uk/people/f.catling
 ---
 
-```{=html}
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-    <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <!-- <li class="breadcrumb-item active">Academic Members</li> -->
-    <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
-  </ol>
-</nav>
-```
-
-:::{#person-profile}
-:::
 
 ## Biography
 
