--- a/people/academic/kohler_katharina.qmd
+++ b/people/academic/kohler_katharina.qmd
@@ -5,34 +5,18 @@ subtitle: "Post-doctoral Researcher"
 image: kohler_katharina.jpg
 started: "September 2022"
 toc: false
-# resources: 
-#   - "your_cv.pdf"
 about:
-  id: person-profile
-  template: jolla
-  links:
-    # Note fas & ai packs use -text: instead of - icon:
-    # See: https://github.com/quarto-ext/fontawesome/issues/6#issuecomment-1188620081
-    - icon: twitter
-      text: Twitter
-      href: https://www.twitter.com/KatharinaKohle4
-    - text: "{{< ai google-scholar >}} Google Scholar"
-      href: https://scholar.google.co.uk/citations?hl=en&authuser=3&user=kdn1BcoAAAAJ
+    template: solana
+    image-shape: rounded
+    image-width: 200px
+    links:
+      - icon: twitter
+        text: Twitter
+        href: https://www.twitter.com/KatharinaKohle4
+      - text: "{{< ai google-scholar >}} Google Scholar"
+        href: https://scholar.google.co.uk/citations?hl=en&authuser=3&user=kdn1BcoAAAAJ
 ---
 
-```{=html}
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-    <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <!-- <li class="breadcrumb-item active">Academic Members</li> -->
-    <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
-  </ol>
-</nav>
-```
-
-:::{#person-profile}
-:::
 
 ## Biography
 
