--- a/people/academic/wilson_matt.qmd
+++ b/people/academic/wilson_matt.qmd
@@ -6,8 +6,9 @@ image: wilson_matt.jpg
 started: "September 2018"
 toc: false
 about:
-    id: person-profile
-    template: jolla
+    template: solana
+    image-shape: rounded
+    image-width: 200px
     links:
         - icon: github
           text: github
@@ -17,19 +18,6 @@ about:
           href: https://twitter.com/MWilson1987
 ---
 
-```{=html}
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-    <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <!-- <li class="breadcrumb-item active">Academic Members</li> -->
-    <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
-  </ol>
-</nav>
-```
-
-:::{#person-profile}
-:::
 
 ## Biography
 
