--- a/people/associate/daniel_hanlon.qmd
+++ b/people/associate/daniel_hanlon.qmd
@@ -1,34 +1,22 @@
 ---
 title: "Daniel Hanlon"
 sortby: "Hanlon, Daniel"
-subtitle: "Visiting Student"
-# image: 
-started: "August 2022"
+subtitle: "2022-"
+# image: placeholder.png
+started: "2022"
+# ended: "2019"
 toc: false
-# resources: 
-#   - "your_cv.pdf"
 about:
-  id: person-profile
-  template: jolla
-  
+    template: solana
+    image-shape: rounded
+    image-width: 200px
+    links:
+        - icon: github
+          text: github
+          href: https://github.com/dan-hanlon
 ---
 
-```{=html}
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-    <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <!-- <li class="breadcrumb-item active">Associate Members</li> -->
-    <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
-  </ol>
-</nav>
-```
 
-:::{#person-profile}
-:::
+Visiting student
 
-## Biography
-
-
----
-
+Medical student. Once upon a time software engineer. MSc AI in Medicine.
