--- a/people/academic/rashan_aasiyah.qmd
+++ b/people/academic/rashan_aasiyah.qmd
@@ -5,34 +5,18 @@
  started: "September 2020"
  toc: false
  about:
-   id: person-profile
-   template: jolla
-   links:
-     # Note fas & ai packs use -text: instead of - icon:
-     # See: https://github.com/quarto-ext/fontawesome/issues/6#issuecomment-1188620081
-     - icon: github
-       text: GitHub
-       href: https://github.com/aasiyahrashan
-     - text: "{{< ai orcid >}} ORCID"
-       href: https://orcid.org/0000-0002-7456-4322
-     - text: "{{< ai google-scholar >}} Google Scholar"
-       href: https://scholar.google.com/citations?user=3PCgFqIAAAAJ&hl=en
+    template: solana
+    image-shape: rounded
+    image-width: 200px
+    links:
+      - icon: github
+        text: GitHub
+        href: https://github.com/aasiyahrashan
+      - text: "{{< ai orcid >}} ORCID"
+        href: https://orcid.org/0000-0002-7456-4322
+      - text: "{{< ai google-scholar >}} Google Scholar"
+        href: https://scholar.google.com/citations?user=3PCgFqIAAAAJ&hl=en
 ---
-
-
- ```{=html}
- <nav aria-label="breadcrumb">
-   <ol class="breadcrumb">
-     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-     <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-     <!-- <li class="breadcrumb-item active">Academic Members</li> -->
-     <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
-   </ol>
- </nav>
- ```
-
-:::{#person-profile}
-:::
 
 ## Biography
 
