--- a/people/clinical/hla_teddy.qmd
+++ b/people/clinical/hla_teddy.qmd
@@ -5,42 +5,26 @@ subtitle: "Clinical Fellow in Data Science & Critical Care"
 image: hla_teddy.jpeg
 started: "February 2022"
 toc: false
-# resources: 
-#   - "your_cv.pdf"
 about:
-  id: person-profile
-  template: jolla
-  links:
-    # Note fas & ai packs use -text: instead of - icon:
-    # See: https://github.com/quarto-ext/fontawesome/issues/6#issuecomment-1188620081
-    - icon: globe
-      text: Personal Website
-      href: http://teddyhla.com/
-    - icon: twitter
-      text: Twitter
-      href: https://www.twitter.com/teddyhla
-    - text: "{{< ai researchgate >}} ResearchGate"
-      href: https://www.researchgate.net/profile/Teddy-Tun-Win-Hla
-    - icon: github
-      text: GitHub
-      href: https://github.com/teddyhla
-    - icon: linkedin
-      text: LinkedIn
-      href: https://www.linkedin.com/in/teddy-hla-73202b47/
+    template: solana
+    image-shape: rounded
+    image-width: 200px
+    links:
+      - icon: globe
+        text: Personal Website
+        href: http://teddyhla.com/
+      - icon: twitter
+        text: Twitter
+        href: https://www.twitter.com/teddyhla
+      - text: "{{< ai researchgate >}} ResearchGate"
+        href: https://www.researchgate.net/profile/Teddy-Tun-Win-Hla
+      - icon: github
+        text: GitHub
+        href: https://github.com/teddyhla
+      - icon: linkedin
+        text: LinkedIn
+        href: https://www.linkedin.com/in/teddy-hla-73202b47/
 ---
-
-```{=html}
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-    <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <li class="breadcrumb-item active">Research Staff</li>
-    <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
-  </ol>
-</nav>
-```
-::: {#person-profile}
-:::
 
 ## Biography
 
