--- a/resources.qmd
+++ b/resources.qmd
@@ -1,22 +1,40 @@
 ---
-pagetitle: "Resources | UCL Health Algorithm Lab"
-toc: false
-email-obfuscation: references
-listing:
-  type: table
-  contents: resources
-  sort: "date desc"
-  categories: true
-  fields: [title, description, categories]
+title: "Research overview"
+pagetitle: "Research | UCLHAL"
+page-layout: full
+toc: true
 ---
 
-# Resources
-Helpful [resources](resources.html) collated below:
+## Clinical Topics
 
-* [Onboarding](#category=onboarding) information for UCL HAL 
-  * [**Start here!**](resources/onboarding/start.html)
-* What is [HYLODE](#category=hylode)?
-* An introduction to the [Data Clinic](#category=data_clinic)
-* [EPIC](#category=epic)-specific training
-* Curated [datasets](#category=datasets)
-* [External resources](#category=external_resources) that we have found helpful to learn data science
+
+- **Timely delivery of critical care** – We are interested in methodologically rigorous methods of evaluating the impact of delay to treatment.
+
+## Methodological Topics
+
+- **Causal Inference** – We are interested in ... (see BJA series and ICM paper)
+
+- **Data science teaching** 
+
+
+
+## Research Funding
+
+### Current Funding
+
+- *"Collaborative Healthcare Innovation through Mathematics, EngineeRing and AI"*
+    - EPSRC
+    - **Harris** (Co-Investigator)
+    - 2020-
+
+
+### Completed Funding
+
+- *"Collaborative Healthcare Innovation through Mathematics, EngineeRing and AI"*
+    - University College London Hospital Charity
+    - Brealey D, *Harris S*, MacCallum N (Co-Principal Investigators): 
+    - 2017-2020
+    
+<!-- ### Pending Funding -->
+
+ -->
