--- a/index.qmd
+++ b/index.qmd
@@ -11,12 +11,20 @@ toc: false
 
 <!-- ![](./img/showcase.svg){.hero} -->
 
+## Opportunities
+
 ::: {.callout-note}
-## We are currently recruiting!
+### We are currently recruiting!
 
 If you are interested in joining the lab as a Data Scientist, please get in touch.<br />
 <!-- You can find more information about this recruitment cycle at [this blog post](./posts/recruitment2023) (or under News). -->
 :::
+
+### Students
+
+Undergraduate students work as **research assistants**, learning about the scientific method and assisting in the collection and processing of research data. Research assistants attend weekly lab meetings and can expect a **letter of recommendation** describing their work in and contributions to the lab (please give one month of advanced notice). Opportunities to earn **co-authorship** on research products (e.g., conference presentations) are also occasionally offered to advanced research assistants.
+
+
 
 
 <!-- ## Email Us
