--- a/tutorials/data-clinic/data-clinic-for-fellows.qmd
+++ b/tutorials/data-clinic/data-clinic-for-fellows.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Clinic: Detail"
+title: "Data Clinic: Onboarding for Data Fellows"
 description: "An in-depth explanation of the Data Clinic, made for future data science fellows."
 author: "Ruaraidh Campbell"
 date: 2022-11-16
@@ -22,26 +22,26 @@ UCLH has invested millons of pounds to obtain an fully electronic health record 
 
 The current method for obtaining data from EPIC is through contacting the Buisness Intelligence (BI) team, whose role it is to monitor performance data in their department and service data requests. This has a number of issues: 
 
-     - Many clinical staff are unaware of who the BI team are or what they do 
-     - The current process of requesting data often takes the form of numerous back-and-forth emails between clinical staff and the BI team, clarifying what data is required vs what is possible to extract. This process is often time-consuming and frustrating for both the clinical staff and BI team. 
-     - Although the BI team have a good understanding of how to find data in Epic and manage it, sometimes they lack the clinical understanding and direction to provide learning from it. 
+>  - Many clinical staff are unaware of who the BI team are or what they do 
+>  - The current process of requesting data often takes the form of numerous back-and-forth emails between clinical staff and the BI team, clarifying what data is required vs what is possible to extract. This process is often time-consuming and frustrating for both the clinical staff and BI team. 
+>  - Although the BI team have a good understanding of how to find data in Epic and manage it, sometimes they lack the clinical understanding and direction to provide learning from it. 
 
 The Data Clinic aims to improve the process of providing data to clinical staff using two approaches:
 
-     1. We aim to understand the clinical question the requestor is trying to answer and, with our knowledge of the data that is available, clarify exactly what data is required for their project.
-     2. Then we work with the BI team to provide that data for the requestor as quickly as possible, in the form that the requestor needs.
+>  1. We aim to understand the clinical question the requestor is trying to answer and, with our knowledge of the data that is available, clarify exactly what data is required for their project.
+>  2. Then we work with the BI team to provide that data for the requestor as quickly as possible, in the form that the requestor needs.
 
 We hypothesise that this shall benefit both clinical staff and the BI team. 
 
-     Clinical staff: 
-     - makes the process of getting data from EPIC clearer
-     - enhances understanding of the data that is available from EPIC 
-     - help with analysis of data (if required)
-     - easier to get the data needed to complete audit/QIP/service evaluations (thereby increasing the number of projects completed and improving patient care)
+>   Clinical staff:   
+>  - makes the process of getting data from EPIC clearer  
+>  - enhances understanding of the data that is available from EPIC   
+>  - help with analysis of data (if required)  
+>  - overall makes it easier to get the data needed to complete audit/QIP/service evaluations (thereby increasing the number of projects completed and improving patient care)  
 
-     BI team:
-     - Saves time/frustration emailing back-and-forth with clinical staff   
-     - Better understanding of clinical relevance of their work (through feedback on the results of QI projects)
+>  BI team:  
+>  - Saves time/frustration emailing back-and-forth with clinical staff     
+>  - Better understanding of clinical relevance of their work (through feedback on the results of QI projects)  
 
 # (Current) Structure of the Data Clinic
 
@@ -58,21 +58,21 @@ Once a request has been recieved, a Data Fellow meets with the requestor to disc
 
 Following this, the Data Fellow shall meet with the BI team to perform a 1st extraction of the data. This shall be shown to the requestor.   
 
-If they are happy with this data, we then proceed to a full data extraction and delivery. If they are not satisfied, the extraction is revised and further meeting are arranged with the requestor until the data provided is adaquate (see Figure 1 for a diagram of this) 
+If they are happy with this data, we then proceed to a full data extraction and delivery. If they are not satisfied, the extraction is revised and further meeting are arranged with the requestor until the data provided is adaquate (see the below flowchart for a graphical representation of this process) 
 
 ```{mermaid}
 flowchart TD
-A(Data request recieved) --- B(1st Meeting between requestor & Data Fellow)
-B --- C(Meeting between Data Fellow and BI team)
-C --- D[1st extraction of data]
-D --- F{2nd meeting between requestor & Data Fellow}
-F --- G[Happy with data]
-F --- H[Revisions needed]
-G --- I(Full extraction & data delivered)
-H --- J(Further revision to extraction)
-J --- F
+A(Data request recieved) --> B(1st Meeting between requestor & Data Fellow)
+B --> C(Meeting between Data Fellow and BI team)
+C --> D[1st extraction of data]
+D --> F{2nd meeting between requestor & Data Fellow}
+F --> G[Happy with data]
+F --> H[Revisions needed]
+G --> I(Full extraction & data delivered)
+H --> J(Further revision to extraction)
+J --> F
 
-linkStyle default stroke: white;
+linkStyle default stroke: black;
 ```
 
 As the Data Clinic is being run as a QIP, this process is subject to change over time. 
@@ -136,12 +136,12 @@ Below is a checklist of items to arrange to get up-and-running with the Data Cli
 > - Survey done on 33 staff members in Critical Care that identified barriers to using data to complete audit/QI projects  
 > - 7/8 projects served through Data Clinic, including audit/QI/project feasibility projects.  
 > - Draft project tracker set up to record length of time taken to serve data for data requests  
-> - Qualitative feedback on the Data Clinic process gathered from joint meetings between Data lead/Data Fellows/BI team  
+> - Informal qualitative feedback on the Data Clinic process gathered from joint meetings between Data lead/Data Fellows/BI team  
 > - Adjustments made to running of the Data Clinic from this feedback including identifying the need for Audit/Methodology support for some projects before they attend Data Clinic, to clarify the aims and scope of projects.  
 > - Overall, provided qualitative evidence that the Data Clinic initiative was feasible, beneficial to BI team and could help clinical staff.  
 
 2022/23
 
-> - Plan for the year was to formalise the measurement of the Data Clinic outcomes, with a view to future publication  
+> - Plan for the year was to formalise outcome/process/balancing measurements for the Data Clinic & establish a reliable service.  
 > - Data Clinic email address and Teams channel set up, to create central repositiory for Data Clinic items. Github set up for code repository.  
 > - Audit/QI clinic & Methodology clinic set up. Process of referring projects from these clinics to Data Clinic set up.  
